# geoetl

./: .gitignore  README.MD  eda.ipynb  index.ipynb  pyproject.toml
dags/: README.md  packages.txt  pyproject.toml  requirements.txt
dags/dags/: geotl_dag.py
dags/dags/old/: example_duck.py
dags/tests/dags/: test_dag_integrity.py
docker/: docker-compose.yml  init.sql
geotl/: main.ipynb  main.py  v0_neighbour_slow.py
tests/: test_geotl.py
